feat: 在教程中添加配置模型
